# cabbage-leaves

./: 00test.cpp  00test.py  01test.cpp  README.md  answer.txt  compare.py  input.txt  ouput2.txt  output.txt  tempCodeRunnerFile.cpp  tempCodeRunnerFile.py  testcase_maker.py  tester.py
c++/: 00test.cpp  01test.cpp  10807.cpp  11328.cpp  1357.cpp  1918.cpp  5597.cpp  CMakeLists.txt
python3/: 00test.py  01test.py
