cmake_minimum_required(VERSION 3.16)
project(c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(00test 00test.cpp)
add_executable(01test 01test.cpp)
add_executable(02test 02test.cpp)
add_executable(1918 1918.cpp)
add_executable(10807 10807.cpp)
add_executable(11328 11328.cpp)
add_executable(5597 5597.cpp)
add_executable(1357 1357.cpp)